care/force-app/main/default/objects/Infraction__c/Infraction__c.object-meta.xml
<CustomObject>
    <description>BUC Violations</description>
    <label>Infraction</label>
    <nameField>
        <label>Violation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Infractions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>