care/force-app/main/default/objects/Infraction__c/fields/Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Date__c</fullName>
    <description>SFORCE-7780 - This field is Used by BUC Provider Network team</description>
    <label>Inspection Date</label>
    <type>Date</type>
</CustomField>