care/force-app/main/default/objects/Infraction__c/fields/Sub_Critical_And_Within_365_Days__c.field-meta.xml
<CustomField>
    <fullName>Sub_Critical_And_Within_365_Days__c</fullName>
    <description>If this is Sub-Critical Record and also fall under last 365 days returns 1 Otherwise 0.</description>
    <formula>if(AND((Violation_Date__c &gt;= TODAY() - 365),ISPICKVAL(Violation_Level__c,&apos;Sub-Critical&apos;)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this is Sub-Critical Record and also fall under last 365 days returns 1 Otherwise 0.</inlineHelpText>
    <label>Sub-Critical And Within 365 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>