care/force-app/main/default/objects/Infraction__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>External UUID for integration with the platform</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>