care/force-app/main/default/objects/Infraction__c/fields/Vetting_Object__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Object__c</fullName>
    <description>Vetting Object</description>
    <inlineHelpText>Vetting Object</inlineHelpText>
    <label>Vetting Object</label>
    <referenceTo>Vetting__c</referenceTo>
    <relationshipLabel>Infractions</relationshipLabel>
    <relationshipName>Infractions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>