care/force-app/main/default/objects/Infraction__c/fields/Violation_Date__c.field-meta.xml
<CustomField>
    <fullName>Violation_Date__c</fullName>
    <description>Violation Date</description>
    <inlineHelpText>Violation Date</inlineHelpText>
    <label>Violation Date</label>
    <type>Date</type>
</CustomField>