care/force-app/main/default/objects/Infraction__c/fields/Violation_Description__c.field-meta.xml
<CustomField>
    <fullName>Violation_Description__c</fullName>
    <description>Violation Description</description>
    <inlineHelpText>Violation Description</inlineHelpText>
    <label>Violation Description</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>