care/force-app/main/default/objects/Infraction__c/fields/Violation_Level__c.field-meta.xml
<CustomField>
    <fullName>Violation_Level__c</fullName>
    <description>Violation Level 
This is used in Account Score forumla  - the points associated with these levels are  (AF=21, C=7, SB=3, M=0, NC=0)</description>
    <inlineHelpText>Violation Level</inlineHelpText>
    <label>Violation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Fail</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Sub-Critical</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Non-Critical</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>