care/force-app/main/default/objects/Infraction__c/fields/Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type__c</fullName>
    <description>Violation Type</description>
    <inlineHelpText>Violation Type</inlineHelpText>
    <label>Violation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Supervision</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Building and Maintenance</fullName>
            </value>
            <value>
                <fullName>No Violations</fullName>
            </value>
            <value>
                <fullName>No Inspection</fullName>
            </value>
            <value>
                <fullName>Corresponding Score</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>