care/force-app/main/default/objects/Infraction__c/validationRules/BUC_Vetting_Object_Name_Edit_Only_For_Ad.validationRule-meta.xml
<ValidationRule>
    <fullName>BUC_Vetting_Object_Name_Edit_Only_For_Ad</fullName>
    <active>true</active>
    <description>BUC_Vetting_Object_Name_Edit_Only_For_Admins</description>
    <errorConditionFormula>AND(
   $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
   ISCHANGED(Vetting_Object__c)
	)</errorConditionFormula>
    <errorMessage>Insufficient previleges to edit Vetting Name. Please contact administrator.</errorMessage>
</ValidationRule>